2008-04-26  Robin Dunn  <robin@alldunn.com>

        Reviewed by Kevin Ollivier.

        wx build fix. Add needed wx includes for compilation.

        https://bugs.webkit.org/show_bug.cgi?id=18758

        * platform/wx/FileSystemWx.cpp:

2008-04-26  Anatoli Papirovski  <apapirovski@mac.com>

        Reviewed by Dave Hyatt.

        Fix for https://bugs.webkit.org/show_bug.cgi?id=18583
        WebKit should ignore declarations with a negative value for
        line-height and font-size, including in the shorthand font form.

        Tests: fast/css/font-size-negative.html
               fast/css/line-height-negative.html

        * css/CSSParser.cpp:
        (WebCore::CSSParser::parseValue):
        (WebCore::CSSParser::parseFont):

2008-04-25  Anders Carlsson  <andersca@apple.com>

        Reviewed by Sam.

        Add empty ApplicationCacheStorage class.
        
        * WebCore.vcproj/WebCore.vcproj:
        * WebCore.xcodeproj/project.pbxproj:
        * loader/appcache/ApplicationCacheStorage.cpp: Added.
        (WebCore::cacheStorage):
        * loader/appcache/ApplicationCacheStorage.h: Added.

2008-04-24  Sam Weinig  <sam@webkit.org>

        Reviewed by Geoffrey Garen.

        Replace the JSDOMWindow with a new one instead of clearing it.

        * bindings/js/JSDOMWindowBase.cpp:
        (WebCore::JSDOMWindowBase::clear):
        Don't reset the window.

        * bindings/js/kjs_proxy.cpp:
        (WebCore::KJSProxy::clear):
        Replace the current JSDOMWindow stored in the wrapper window
        with a new one.

        * history/CachedPage.cpp:
        (WebCore::CachedPage::CachedPage):
        (WebCore::CachedPage::restore):
        (WebCore::CachedPage::clear):
        * history/CachedPage.h:
        Instead of storing the builtins, properties and localstorage in
        special holding structs, store the entire JSDOMWindow.

        For the case of a page that has no JSDOMWindow before it's first